Fri Jan 13 12:01:06 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_geospatial.cc: Include <xapian.h> rather than
	  <xapian/geospatial.h> - we're trying to test the public API, so
	  including the public API header is better.

Fri Jan 13 11:52:53 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/geospatial.h: Documentation comment tweaks.

Fri Jan 13 11:41:24 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/geospatial.h: In LatLongDistanceKeyMaker, rather than
	  defaulting the distance to the rather arbitrary 10E10, default the
	  key to string(9, '\xff'), which is sortable_serialise(HUGE_VAL).

Fri Jan 13 11:25:31 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/geospatial.h: Don't need <xapian/enquire.h> (probably
	  left over from when there was a MatchDecider subclass here).  Sort
	  remaining xapian headers into alphabetical order.

Fri Jan 13 11:06:02 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/geospatial.h: Don't need XAPIAN_VISIBILITY_DEFAULT on
	  inline functions.

Fri Jan 13 11:04:14 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/geospatial.h: Convert descriptions of exceptions to
	  use doxygen @exception.

Fri Jan 13 05:48:29 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_geospatial.cc: Doesn't use <xapian/error.h>.

Fri Jan 13 05:45:59 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/geospatial.h: Rearrange order of classes to avoid the
	  need to forward declare LatLongCoordsIterator.

Fri Jan 13 05:37:18 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_geospatial.cc: Don't skip latlongpostingsource1 for chert
	  - contrary to the comment, chert supports this testcase fine.

Fri Jan 13 05:36:55 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_geospatial.cc: Doesn't use <iomanip>.

Fri Jan 13 05:28:11 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/geospatial.h: Fix LatLongCoord::operator<() so that
	  a<b and b<a can't both be true.